Update 'backend-tests-go-jmxonjpp' component image to: quay.io/rhtap_qe/backend-tests-go-jmxonjpp:d9a9b708232937843ac21348a612ff3fa797acdb@sha256:2c00f9aba5729d114659e66f7583132a8efb420992985ba07d2890870c550737

--- a/components/backend-tests-go-jmxonjpp/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-jmxonjpp/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-jmxonjpp
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-jmxonjpp:d9a9b708232937843ac21348a612ff3fa797acdb@sha256:2c00f9aba5729d114659e66f7583132a8efb420992985ba07d2890870c550737
+          name: container-image
